corrections sur les z-index (en espérant que ce soit la dernière parce que les idées commencent à se faire rares...)
git-svn-id: svn+ssh://svn.projects.openwide.fr/svnroot/owsi-tools/trunk/owsi-core@2988 d3474844-eb8e-4abc-b058-2b321fed648b

--- a/owsi-core/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/markup/html/template/css/bootstrap3/bootstrap/override/variables.less
+++ b/owsi-core/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/markup/html/template/css/bootstrap3/bootstrap/override/variables.less
@@ -37,16 +37,16 @@
 @zindex-navbar:					1000;
 @zindex-dropdown:				1000;
 @zindex-popover:				110; // originellement 1010 dans BS3
-@zindex-tooltip:				1030;
+@zindex-tooltip:				1200;
 @zindex-navbar-fixed:			1010; // originellement 1030 dans BS3
-@zindex-modal-backdrop:			1019;
-@zindex-modal-background:		1020;
-@zindex-modal:					1029;
+@zindex-modal-backdrop:			1011;
+@zindex-modal-background:		1012;
+@zindex-modal:					1013;
 @zindex-page-popover:			30;		// popover dans la page / donc sous la modale
 @zindex-alert-global:			1100;	// global floating alert panel
 @zindex-alert-global-close:		1101;	// global floating alert panel close button
 @zindex-scroll-to-top:			1035;
-@zindex-modal-date-picker:		300;	// TODO RJO : à revoir avec Bootstrap 3 / Note LAL : définir en fonction de zindex-modal ?
+@zindex-modal-date-picker:		1099;	// pas vraiment possible de le calculer à partir de @zindex-modal car le z-index réel de la modal est calculé en js
 
 // Z-index master list end
 
